# variational-monte-carlo-fys4411

./: CMakeLists.txt  main.cpp  other.cpp  particle.cpp  particle.h  sampler.cpp  sampler.h  system.cpp  system.h
Hamiltonians/: ellipticalharmonicoscillator.cpp  ellipticalharmonicoscillator.h  hamiltonian.cpp  hamiltonian.h  harmonicoscillator.cpp  harmonicoscillator.h
InitialStates/: gaussiandistribution.cpp  initialstate.cpp  initialstate.h  randomuniform.cpp
WaveFunctions/: simplegaussian.cpp  simplegaussian.h  simplegaussianinteraction.cpp  simplegaussianinteraction.h  wavefunction.cpp  wavefunction.h
analysisscripts/: blocking.py  plotting.ipynb
project_text/: Exported Items.bib  References.bib  appendices.aux  essay.tex  intro.tex  results.tex  text.tex  the_text.aux  the_text.bbl  the_text.blg  the_text.dvi  the_text.tex  theory.tex
